# mazyr

./: .env.example  .gitignore  CHANGELOG.md  README.bak  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.memory_backup/qdrant_storage/: raft_state.json
config/: constitution.yaml  filter_rules.yaml
skills/: python-craft.md
spec/: MTS-00-overview.md  MTS-01-domain-layer.md  MTS-02-app-layer.md  MTS-03-infra-layer.md  MTS-04-interfaces.md  MTS-05-data-schemas.md  MTS-06-testing-strategy.md  MTS-07-implementation-plan.md  MTS-07-tool-registry.md  MTS-08-memory-mechanism.md  MTS-09-chat-tui.md
src/mazyr/: __init__.py
src/mazyr/app/: audit.py  bootstrap.py  chat.py  events.py  sync.py
templates/: filter-custom.json.template  identity.md.template  mission.md.template
tests/: conftest.py
tests/_archive/: test_extraction_fallback.py
tests/app/: test_bootstrap.py  test_chat.py
tests/application/: test_audit.py  test_bootstrap.py  test_chat.py  test_chat_events.py  test_event_bus.py  test_learn.py  test_memory_consolidation.py  test_memory_context.py  test_memory_dedup.py  test_memory_extraction.py  test_memory_maintenance.py  test_memory_system.py  test_memory_worker.py  test_skill_registry.py  test_sync.py  test_tool_registry.py  test_tool_registry_events.py  test_tool_security.py
tests/domain/: test_constitution.py  test_filter.py  test_identity.py  test_instance_config.py  test_memory_context.py  test_memory_entry.py  test_memory_episodic.py  test_memory_extraction.py  test_memory_graph.py  test_memory_semantic.py  test_memory_working.py  test_message.py  test_skills.py  test_tool.py  test_tool_config.py
tests/e2e/: test_boot_chat.py
tests/infra/: __init__.py  test_config_loader.py  test_docker_manager.py  test_embeddings_openai.py  test_filesystem.py  test_memory_graph_store.py  test_memory_qdrant.py  test_memory_sqlite.py  test_memory_tier3.py  test_relay_client.py  test_retry.py  test_skill_loader.py  test_tool_parser.py
tests/interfaces/: test_cli_boot.py  test_cli_chat.py
(+126 files in other folders)
