[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazyr-core"
version = "0.1.0"
description = "Mazyr -- Synthetic Partner Node"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Khayren", email = "khayren@voidlight.xyz"}
]
keywords = ["ai", "agent", "synthetic", "partner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "httpx>=0.24",
    "python-dotenv>=1.0",
    "qdrant-client>=1.7",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
mazyr-init = "mazyr.interfaces.cli:init"
mazyr-boot = "mazyr.interfaces.cli:boot"
mazyr-status = "mazyr.interfaces.cli:status"
mazyr-stop = "mazyr.interfaces.cli:stop"
mazyr-sync = "mazyr.interfaces.cli:sync"
mazyr-chat = "mazyr.interfaces.cli:chat"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
